refactor tests, adds PHP tests
* moves the auto_link test data into a JSON file
* adds a PHP auto_link test usin the same JSON test data

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "cassis.js",
   "scripts": {
-    "test": "tape test/*.js | tap-spec"
+    "test": "tape js-tests/*.js | tap-spec"
   },
   "repository": {
     "type": "git",
