add phpcs and change js test run

--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,7 @@ machine:
 
 test:
   override:
+    - phpcs --standard=PSR2
     - mkdir -p $CIRCLE_TEST_REPORTS/phpunit
     - phpunit --log-junit $CIRCLE_TEST_REPORTS/phpunit php-tests
-    - tape js-tests/*.js | tap-spec
+    - node test
