--- a/circle.yml
+++ b/circle.yml
@@ -2,12 +2,13 @@ machine:
   php:
     version: 5.5.11
 
-test:
+dependencies:
   pre:
     - mkdir -p $CIRCLE_TEST_REPORTS/phpunit
     - npm i -g eslint
+
+test:
   override:
     - phpcs --standard=PSR2 cassis.php
     - phpunit --log-junit $CIRCLE_TEST_REPORTS/phpunit php-tests
     - eslint cassis.js
-    - npm test
