--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,10 @@
 	"name": "tantek/cassis",
 	"autoload": {
 		"files": ["cassis.php"]
+	},
+	"scripts": {
+		"post-update-cmd": [
+			"@php post-process.php"
+		]
 	}
 }
