https, tantek.com for docs

--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   ],
   "author": {
     "name": "Tantek Çelik",
-    "url": "http://tantek.com/"
+    "url": "https://tantek.com/"
   },
   "license": "CC BY-SA 3.0",
   "bugs": {
     "url": "https://github.com/tantek/cassis/issues"
   },
-  "homepage": "http://tantek.pbworks.com/w/page/19402872/CassisProject",
+  "homepage": "https://tantek.com/w/CassisProject",
   "devDependencies": {
     "tap-spec": "^2.2.2",
     "tape": "^3.5.0"
